KIN-3135 fixes rom-comment-column-alignment-issue

--- a/src/screens/chart-notes/medical-intervention-rom-config-v2/MedicalInterventionRomConfigV2Screen.scss
+++ b/src/screens/chart-notes/medical-intervention-rom-config-v2/MedicalInterventionRomConfigV2Screen.scss
@@ -21,6 +21,10 @@
       }
     }
   }
+  .t-cell-comments{
+    justify-content: space-between !important;
+    padding-left: 8px !important;
+  }
 
   .movement-comment {
     word-break: break-word;
